# University_Labs

./: README.md
asm/lab1/: Makefile  build.sh  clear_lab.asm  lab1  lab1.asm
asm/lab2/: Makefile  build.sh  lab2  lab2.asm  lab2cl.asm
asm/lab3/: lab3.asm
c/lab1/: func.h  main.c  task.txt
c/lab2/: help_func.c  help_func.h  io.c  main.c  q_list.c  q_vector.c  queue.h
c/lab3a/: task.txt
c/lab3a/include/: Table.h
c/lab3a/src/: io.c  main.c
c/lab3b/: Makefile
c/lab3b/include/: Table.h
c/lab3b/src/: io.c  table_func.c
c/lab4a/include/: func_time.h
c/lab4a/src/: main.c  tree_func.c
c/lab4b/: task.txt
c/lab4b/include/: Tree.h  func_time.h  menu.h
c/lab4b/src/: menu.c  tree_func.c
c/lab5/: Makefile
c/lab5/include/: io.h  queue.h  ui.h
c/lab5/src/: io.c  menu.c  ui.c
cpp/1/: .gitignore  CMakeLists.txt  task.txt
cpp/1/include/: exception.hpp  funcs_arr_to_toml.hpp  funcs_toml_to_arr.hpp  ui.hpp
cpp/1/libs/utils/: CMakeLists.txt
cpp/1/libs/utils/include/: safe_input.hpp
cpp/1/libs/utils/src/: safe_input.cpp
cpp/1/src/: exception.cpp  funcs_arr_to_toml.cpp  funcs_toml_to_arr.cpp  main.cpp  ui.cpp
cpp/2/: .gitignore  CMakeLists.txt  Doxyfile  coverage.sh  generate_docs.sh  task.txt
cpp/2/include/: MyVector.hpp  MyVector.tpp  StudentWork.hpp  WorkStack.hpp
cpp/2/src/app/: main.cpp
cpp/2/src/lib/: StudentWork.cpp  WorkStack.cpp
cpp/2/tests/: CMakeLists.txt  test_myvector.cpp  test_student_work.cpp  test_workstack.cpp
cpp/3/: .gitignore  CMakeLists.txt  Doxyfile  README.md  coverage.sh  generate_docs.sh  task.txt.txt
cpp/3/model/include/: Brigade.hpp  Foreman.hpp  HashTable.hpp  HashTable.tpp  Master.hpp  WorkZone.hpp  Worker.hpp  Workman.hpp
cpp/3/model/src/: Brigade.cpp  Master.cpp  WorkZone.cpp  Worker.cpp  Workman.cpp
cpp/3/my_app/: main.cpp
cpp/3/parallel_test/: main_parallel_test.cpp
cpp/3/tests/: CMakeLists.txt  test_brigade.cpp  test_hash_table.cpp  test_master.cpp  test_worker.cpp  test_workman.cpp  test_workzone.cpp
cpp/3/view/include/: ActionsScreen.hpp  ImportExportScreen.hpp  MainScreen.hpp  StatsScreen.hpp  WorkZonesScreen.hpp  WorkersScreen.hpp
cpp/3/view/src/: ActionsScreen.cpp  ImportExportScreen.cpp  MainScreen.cpp  StatsScreen.cpp  WorkZonesScreen.cpp  WorkersScreen.cpp
lab1/: io_matrix.c  matrix_func.c
lab2/: io.h  task.txt
lab3a/: Makefile
lab3a/include/: io.h
lab3a/src/: menu.c  table_func.c
lab3b/: task.txt
lab3b/include/: io.h  menu.h
lab3b/src/: main.c  menu.c
lab4a/: Makefile  task.txt
lab4a/include/: Tree.h  io.h  menu.h
lab4a/src/: func_time.c  io.c  menu.c
lab4b/: Makefile
lab4b/include/: io.h
lab4b/src/: func_time.c  io.c  main.c  tree_ui.c
lab5/: task.txt
lab5/include/: Graph.h  menu.h
lab5/src/: graph_func.c  main.c  queue.c
